--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ blinker==1.9.0
 click==8.1.7
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
 numpy==2.1.3
+packaging==24.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
